--- a/package.json
+++ b/package.json
@@ -22,8 +22,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "express": "^5.2.1",
-    "googleapis": "^170.1.0",
-    "open": "^11.0.0"
+    "express": "^5.2.1"
   }
 }
